@@ -1,3 +1,4 @@
+* Dialer: verify that enterqueue_timestamp is set
 * Campaigns Out: fix warning on line that start with a comma
 * Agent Console: verify that $_SESSION['elastix_agent_audit'] is set
 * Agent Console: report most causes of "spontaneous" agent disconnection
